# amaters

./: .gitignore  AmateRS--Blueprint-EN.md  AmateRS--Blueprint.md  AmateRS--Tech-EN.md  AmateRS--Tech.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  STATUS.md  TODO.md  rust-toolchain.toml
.cargo/: audit.toml
crates/amaters/: Cargo.toml  README.md
crates/amaters-cli/: Cargo.toml  README.md  TODO.md
crates/amaters-cli/src/: admin.rs  batch.rs  client.rs  config.rs  diff.rs  keys.rs  main.rs  output.rs  progress.rs  repl.rs  server.rs
crates/amaters-cli/tests/: integration_tests.rs
crates/amaters-cluster/: Cargo.toml  README.md  TODO.md
crates/amaters-cluster/src/: config.rs  encryption.rs  error.rs  failover.rs  heartbeat.rs  key_rotation.rs  lib.rs  log.rs  merkle.rs  metrics.rs  node.rs  node_tests.rs  partitioner.rs  persistence.rs  rpc.rs  shard.rs  snapshot.rs  state.rs  types.rs  wal.rs
crates/amaters-cluster/tests/: integration.rs
crates/amaters-core/: Cargo.toml  README.md  TODO.md
crates/amaters-core/benches/: core_bench.rs  fhe_benchmarks.rs  lsm_benchmarks.rs  storage_bench.rs  storage_benchmarks.rs
crates/amaters-core/examples/: credit_scoring.rs  healthcare_genomics.rs  supply_chain.rs
crates/amaters-core/src/: lib.rs  memory_limiter.rs  metrics.rs  traits.rs  utils.rs  validation.rs
crates/amaters-core/src/compute/: circuit.rs  filter_tests.rs  gpu.rs  key_manager.rs  keys.rs  mod.rs  operations.rs  optimizer.rs  plan_cache.rs  planner.rs  predicate.rs
crates/amaters-core/src/error/: mod.rs  recovery.rs  types.rs
crates/amaters-core/src/storage/: backup.rs  block_cache.rs  bloom_filter.rs  buffer_pool.rs  compaction.rs  compression.rs  lsm_storage.rs  lsm_tree.rs  manifest.rs  memory.rs  memtable.rs  mmap_reader.rs  mod.rs  secondary_index.rs  sstable.rs  value_log.rs  value_log_gc.rs  value_log_gc_worker.rs  wal.rs
crates/amaters-core/src/types/: cipher_blob.rs  key.rs  mod.rs  query.rs
crates/amaters-core/tests/: crash_recovery_tests.rs  proptest_lsm.rs
crates/amaters-net/: Cargo.toml  README.md  TODO.md  build.rs
crates/amaters-net/benches/: net_bench.rs
crates/amaters-net/protocol/: aql.proto  errors.proto  query.proto  types.proto
crates/amaters-net/src/: auth.rs  balancer.rs  circuit_breaker.rs  client.rs  config.rs  convert.rs  error.rs  grpc_service.rs  lib.rs  logging_layer.rs  metrics_layer.rs  mtls.rs  ocsp.rs  pool.rs  rate_limiter.rs  server.rs  server_admin.rs  server_builder.rs  server_rollback_tests.rs  server_types.rs  tls.rs  tls_acceptor.rs  tls_crypto.rs  tracing_middleware.rs
crates/amaters-sdk-python/: Cargo.toml  README.md  TODO.md  build.rs  pyproject.toml
crates/amaters-sdk-python/python/amaters/: __init__.py  __init__.pyi
crates/amaters-sdk-python/python/amaters/examples/: __init__.py  batch.py  quickstart.py  streaming.py  transactions.py
crates/amaters-sdk-python/src/: config.rs  helpers.rs  lib.rs  streaming.rs  tests.rs  types.rs
crates/amaters-sdk-rust/: Cargo.toml  README.md  TODO.md
crates/amaters-sdk-rust/benches/: client_bench.rs
crates/amaters-sdk-rust/benches/common/: stub_server.rs
crates/amaters-sdk-rust/docs/: cookbook.md  migration.md  tutorial.md
crates/amaters-sdk-rust/examples/: batch.rs  fhe_operations.rs  filter_query.rs  financial.rs  healthcare.rs  persistence.rs  queries.rs  quickstart.rs
crates/amaters-sdk-rust/src/: cache.rs  client.rs  config.rs  connection.rs  connection_manager.rs  error.rs  fhe.rs  lib.rs  mock.rs  query.rs  streaming.rs  transaction.rs
crates/amaters-sdk-rust/tests/: integration_test.rs  property_tests.rs  streaming_tests.rs
crates/amaters-sdk-typescript/: Cargo.toml  README.md  TODO.md  build.sh  package.json  tsconfig.json  tsconfig.node.json  tsconfig.types.json  tsconfig.web.json
crates/amaters-sdk-typescript/examples/: browser-example.html  node-example.ts
crates/amaters-sdk-typescript/src/: client.rs  error.rs  lib.rs  query.rs  transport.rs  types.rs
crates/amaters-sdk-typescript/src/ts/: index.ts
crates/amaters-sdk-typescript/test/: streaming.test.ts
crates/amaters-server/: AUTHENTICATION.md  Cargo.toml  README.md  TODO.md
crates/amaters-server/docs/: configuration-reference.md  deployment-guide.md  operations-guide.md  troubleshooting-guide.md
crates/amaters-server/examples/: api_keys.json  roles.toml  server_with_auth.toml
crates/amaters-server/src/: audit.rs  auth.rs  authz.rs  cli.rs  config.rs  health.rs  hot_reload.rs  lib.rs  log_rotation.rs  main.rs  metrics.rs  middleware.rs  query_cache.rs  retry.rs  server.rs  service.rs  shutdown.rs  tls_config.rs
crates/amaters-server/tests/: auth_integration.rs  e2e_tests.rs  fault_tolerance_tests.rs  fhe_filter_tests.rs  integration_tests.rs  lsm_persistence_tests.rs  performance_tests.rs
crates/amaters-server/tests/common/: mod.rs
crates/amaters-server/tests/e2e_common/: mod.rs
crates/amaters-server/tests/fixtures/: ec256_private.pem  ec256_public.pem  ec384_private.pem  ec384_public.pem  ed25519_private.pem  ed25519_public.pem  rsa_private.pem  rsa_public.pem
crates/amaters/examples/: basic_crud.rs  compression.rs  query_builder.rs  storage_engine.rs
crates/amaters/src/: lib.rs
docs/: security-model.md
docs/adr/: 001-fhe-library-choice.md
examples/: credit_scoring.rs  healthcare_genomics.rs  supply_chain.rs
