[workspace]
resolver = "2"
members = [
    "crates/amaters-core",
    "crates/amaters-net",
    "crates/amaters-cluster",
    "crates/amaters-server",
    "crates/amaters-sdk-rust",
    "crates/amaters-sdk-python",
    "crates/amaters-sdk-typescript",
    "crates/amaters-cli",
    "crates/amaters",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/amaters"
authors = ["COOLJAPAN OU (Team KitaSan) <contact@cooljapan.tech>"]
homepage = "https://github.com/cool-japan/amaters"
documentation = "https://docs.rs/amaters"

[workspace.dependencies]
# Internal crates
amaters-core = { path = "crates/amaters-core", version = "0.2.0" }
amaters-net = { path = "crates/amaters-net", version = "0.2.0" }
amaters-cluster = { path = "crates/amaters-cluster", version = "0.2.0" }
amaters-sdk-rust = { path = "crates/amaters-sdk-rust", version = "0.2.0" }

# FHE and Cryptography
tfhe = { version = "1.5", default-features = false }

# Async runtime and I/O
tokio = { version = "1.50", features = ["full"] }
tokio-uring = "0.5"  # Linux only
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["rt", "time"] }
tokio-stream = "0.1"

# Serialization
rkyv = "0.8"
oxicode = { version = "0.2.2", features = ["alloc", "serde"] }  # COOLJAPAN policy

# Networking
tonic = { version = "0.14", features = ["gzip", "transport", "tls-ring", "tls-webpki-roots"] }
tonic-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
quinn = "0.11"  # QUIC protocol
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
http = "1.4"
axum = "0.8"
jsonwebtoken = { version = "9.3", features = ["use_pem"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
x509-parser = "0.18"
rcgen = "0.14"
webpki-roots = "1.0"
rustls-pemfile = "2.2"

# Consensus
raft = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Collections and data structures
dashmap = "6.1"  # Concurrent HashMap
parking_lot = "0.12"  # Better Mutex/RwLock

# Parallelism
rayon = "1.11"
crossbeam = "0.8"
num_cpus = "1.17"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# CLI
clap = { version = "4.6", features = ["derive", "cargo"] }
clap_complete = "4.6"
comfy-table = ">=7.1, <7.2"
indicatif = "0.18"
serde_yaml = "0.9"

# Utilities
bytemuck = { version = "1.25", features = ["derive"] }
memmap2 = "0.9"
crc32fast = "1.5"
oxiarc-lz4 = "0.2"
oxiarc-deflate = "0.2"
blake3 = "1.8"  # Fast hashing
aes-gcm = "0.10"  # AES-256-GCM authenticated encryption (pure Rust)
hmac = "0.12"     # HMAC construction (pure Rust)
sha2 = "0.10"     # SHA-2 hash family (pure Rust)
hkdf = "0.12"     # HKDF key derivation (pure Rust)
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.27"
proptest = "1.11"
quickcheck = "1.1"
quickcheck_macros = "1.2"
approx = "0.5"
tracing-test = "0.2"
serial_test = "3.2"

# Hot reload and atomic pointer swap
arc-swap = "1.9"
notify = "8.2"   # Cross-platform filesystem notifications (pure Rust on Linux)

# Diff
similar = "3.1.0"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
dead_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "warn"  # No unwrap policy
expect_used = "allow"  # Allow expect() with descriptive messages
type_complexity = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1  # Line numbers only for faster builds
split-debuginfo = "packed"
incremental = true

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies
debug = false
strip = "debuginfo"

[profile.test]
opt-level = 0
debug = 1
split-debuginfo = "packed"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
