[package]
name = "amaters-cli"
description = "Command-line interface for AmateRS"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["cli", "database"]
categories = ["command-line-utilities", "database"]

[dependencies]
amaters-core = { workspace = true }
amaters-sdk-rust = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "amaters-cli"
path = "src/main.rs"

[lints]
workspace = true
