[package]
name = "amaters-net"
description = "Network layer for AmateRS (Musubi)"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["grpc", "quic", "networking", "mtls"]
categories = ["network-programming", "cryptography"]

[features]
default = ["mtls"]
mtls = ["dep:rustls", "dep:tokio-rustls", "dep:x509-parser", "dep:rcgen", "dep:webpki-roots", "dep:rustls-pemfile"]
compute = ["amaters-core/compute"]
compression = ["tonic/gzip"]

[dependencies]
amaters-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }

# mTLS dependencies (feature-gated)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
prost-build = "0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "net_bench"
harness = false

[lints]
workspace = true
