[package]
name = "amaters-sdk-python"
description = "Python SDK for AmateRS with PyO3 bindings"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["python", "sdk", "bindings", "database", "fhe"]
categories = ["api-bindings", "database"]

[lib]
name = "amaters"
crate-type = ["cdylib", "lib"]
doc = false

[dependencies]
amaters-core = { workspace = true }
amaters-sdk-rust = { workspace = true }
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tfhe = { workspace = true, optional = true }
oxicode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# PyO3 dependencies
pyo3 = { version = "0.28", features = ["abi3-py38", "anyhow"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime", "attributes"] }

[build-dependencies]
# Used in build.rs to emit Python link directives when extension-module feature is active,
# so that `cargo nextest run --all-features` can build test binaries successfully.
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
fhe = ["tfhe", "amaters-sdk-rust/fhe"]
serialization = ["serde", "serde_json", "oxicode", "amaters-sdk-rust/serialization"]

[lints]
workspace = true
