[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "amaters"
version = "0.2.0"
description = "Python SDK for AmateRS - Fully Homomorphic Encrypted Database"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "COOLJAPAN OU (Team KitaSan)", email = "contact@cooljapan.tech" }
]
keywords = ["fhe", "database", "encryption", "homomorphic", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/cool-japan/amaters"
Documentation = "https://docs.rs/amaters"
Repository = "https://github.com/cool-japan/amaters"
"Bug Tracker" = "https://github.com/cool-japan/amaters/issues"

[tool.maturin]
python-source = "python"
module-name = "amaters._internal"
# Pyo3 0.28 deprecated the `extension-module` Cargo feature.  Linking is
# now driven by the `PYO3_BUILD_EXTENSION_MODULE=1` environment variable
# (see ``build.rs`` in this crate).  ``maturin`` exports that variable
# automatically when building the wheel; tests link against ``libpython``
# normally.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T10", "T20"]
ignore = []
